# loan-amortisation-rust

./: Cargo.toml  README.md  index.html  index.js  loan_amortisation_rust.d.ts  loan_amortisation_rust.js  loan_amortisation_rust_bg.wasm  loan_amortisation_rust_bg.wasm.d.ts  package.json
.github/: .copilot-instructions.md
.github/workflows/: rust.yml
src/: amortise.rs  lib.rs  main.rs  wasm.rs
src/amortise/: interest.rs  schedule.rs  secant.rs  utils.rs
static/: index.html  index.js  loan_amortisation_rust_bg.wasm
