[package]
name = "loan-amortisation-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36", features = ["maths"] }
rust_decimal_macros = "1.36"
chrono = "0.4"
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
